traefik/kubernetes/applications/whoami/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: whoami-deployment
    labels:
        app: whoami

spec:
    replicas: 1
    selector:
        matchLabels:
            app: whoami
    template:
        metadata:
            labels:
                app: whoami
        spec:
            containers:
                - name: whoami
                  image: traefik/whoami
                  ports:
                      - name: web
                        containerPort: 80
                  resources:
                      limits:
                          cpu: 200m
                          memory: 256Mi
