traefik/kubernetes/applications/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: whoami-service

spec:
    ports:
        - name: web
          port: 80
          targetPort: web

    selector:
        app: whoami
